# fleet-wiki

./: CHARTER.md  DOCKSIDE-EXAM.md  README.md  cli.py  generator.py  pyproject.toml  search.py  wiki.py
tests/: test_fleet_wiki.py
