[project]
name = "fleet-wiki"
version = "1.0.0"
description = "Fleet Wiki — documentation and knowledge management engine for AI agent fleets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
fleet-wiki = "cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
